# PyMocker

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
examples/: db.py  decorator.py  example_before_after.py  example_custom_provider.py  example_df.py  example_static_attributes.py  polytest.py  rejection_sampling_example.py
examples/data/: testing.xlsx
pymocker/: main.py  mocker.py  mocker.pyi
pymocker/builder/: __init__.py  base.py  coercers.py  extensible.py  mixins.py  rank.py  scan.py  utils.py  validators.py
tests/: test_coercers.py  test_extensible.py  test_mixins.py  test_mocker.py  test_rank.py  test_validators.py
tests/tests_sqlalchemy/: test_sqlalchemy_mocker.py
