[project]
name = "pymocker"
version = "0.1.0"
description = "Generate realistic, context-aware mock data automatically."
authors = [
    {name = "eschallack",email = "evan.schallack@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]